@@ -65,6 +65,7 @@ from twisted.internet import reactor
 from twisted.web import proxy, server
 from tlib.jabber import component, jid
 from tlib.domish import Element
+from tlib import xmlstream
 from twisted.internet import task
 import twisted.python.log
 
@@ -151,7 +152,9 @@ class PyTransport(component.Service):
 		self.xmlstream.addObserver("/iq", self.discovery.onIq)
 		self.xmlstream.addObserver("/presence", self.onPresence)
 		self.xmlstream.addObserver("/message", self.onMessage)
-                self.xmlstream.addObserver("/error[@xmlns='http://etherx.jabber.org/streams']", self.streamError)
+		#self.xmlstream.addObserver("/error[@xmlns='http://etherx.jabber.org/streams']", self.streamError)
+		self.xmlstream.addObserver(xmlstream.STREAM_ERROR_EVENT, self.streamError)
+		self.xmlstream.addObserver(xmlstream.STREAM_END_EVENT, self.streamEnd)
 
 	def componentDisconnected(self):
 		debug.log("PyTransport: Disconnected from main Jabberd server")
@@ -167,6 +170,10 @@ class PyTransport(component.Service):
 	def streamError(self, errelem):
 		debug.log("PyTransport: Received stream error")
 		self.xmlstream.streamError(errelem)
+
+	def streamEnd(self, errelem):
+		debug.log("PyTransport: Received stream end")
+		pass
 	
 	def onMessage(self, el):
 		fro = el.getAttribute("from")
